--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ h1{
 .section .info{
     /* background: rgb(10, 10, 10); */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     height: 50px;
 }
 .info span , .info h3{
     font-size: 25px;
     font-weight: bold;
-    margin: 0px 10px;
+    /* margin: 0px 10px; */
     font-family: sans-serif;
     color: rgb(41, 40, 40);
 }
